--- a/10.html
+++ b/10.html
@@ -9,25 +9,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1 {
-            text-align: center;
-        }
-
-        font {
-            font-size: 20px;
-            text-decoration: black;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        }
+      
     </style>
 </head>
 
 <body>
-    <td>
-        <h1>REGISTRATION FORM</h1>
-    </td>
-    </tr>
+    <tr>
+        <td>
+            <h1>REGISTRATION FORM</h1>
+        </td>
+        </tr>
+    
     <table>
-
         <tr>
             <td>
                 <font>Name</font>
@@ -48,13 +41,13 @@
         </tr>
         <tr>
             <td>
-                <<font>Phone number</font>
+                <font>Phone number</font>
             </td>
             <td> <input type="text" name="" id=" "></td>
         </tr>
         <tr>
             <td>
-                <<font size="10px">Gender</font>
+                <font style="10px">Gender</font>
             </td>
             <td>
                 <font>Male</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input type="radio" name="gender" id="male">
@@ -63,7 +56,7 @@
         </tr>
         <tr>
             <td>
-                < <font>Languages Known</font>
+                <font>Languages Known</font>
                     <select name="language" id="language">
                         <option value="">select language</option>
                         <option value="">English</option>
@@ -75,7 +68,7 @@
         </tr>
         <tr>
             <td>
-                <<font>Address</font> <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <font>Address</font> <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<textarea name="" id="" cols="15"
                         rows="5"></textarea>
             </td>
