--- a/5.html
+++ b/5.html
@@ -38,7 +38,7 @@
         input:focus {
             border: 3px solid lightblue;
             color: blue;
-            width: 300px;
+            width: 500x;
         }
     </style>
 </head>
@@ -47,7 +47,7 @@
 
     <h2>Styling a link depending on state</h2>
 
-    <p><b><a href="succes.html">This is a link</a></b></p>
+    <p><b><a href="success.html">This is a link</a></b></p>
     <p><b>Note:</b> 'a' tag changes its appearance when you hover it!</p>
     <img src="https://th.bing.com/th/id/R.29466800e5368c0b4b9b4e8f98bd72f6?rik=%2fvZS%2bjUJdoEX2w&riu=http%3a%2f%2fthedestinyformula.com%2fwp-content%2fuploads%2f2018%2f02%2fBlue_Grosbeak_c22-37-091_l_1.jpg&ehk=fJlnOtq5DILNdH17RKOED0pJwkeSokyT8WW1Z1daXLk%3d&risl=&pid=ImgRaw&r=0">
     <div>
